base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    app.kubernetes.io/name: metabase
